<resources>
    <string name="app_name">Trends</string>
    <string name="title">Название</string>
    <string name="text">Текст</string>
    <string name="category">Категория</string>
    <string name="tags">Тэги</string>
    <string name="newPost">Новый тренд</string>
    <string name="confirmation">Подтверждение</string>
    <string name="ifYouExit">Если вы выйдете, этот тренд будет удалён</string>
    <string name="cancel">Отмена</string>
    <string name="exit">Выйти</string>
    <string name="userDescription">Описание: </string>
    <string name="registrationDate">Дата регистрации: </string>
    <string name="totalSubscribers">Всего подписчиков: </string>
    <string name="totalPosts">Всего постов: </string>
    <string name="totalLikes">Всего лайков: </string>
    <string name="editing">Редактирование</string>
    <string name="doYouWontToDeleteTrend">Вы действительно хотите удалить этот тренд?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="deleting">Удаление</string>
    <string name="chooseCategory">Выберите категорию</string>

    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="nickname">Имя пользователя</string>

    <string name="world">Мир</string>
    <string name="subscribtions">Подписки</string>
    <string name="trends">Тренды</string>
    <string name="aboutUser">О пользователе</string>

    <!-- Navigation Drawer -->
    <string name="main">Главная</string>
    <string name="liked">Понравившееся</string>
    <string name="myProfile">Мой профиль</string>
    <string name="settings">Настройки</string>
    <string name="shop">Магазин</string>
    <string name="bugReport">Отчёт об ошибке</string>
    <string name="logout">Выйти</string>



    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="appbar_spring_behavior">android.support.design.widget.AppBarLayoutSpringBehavior</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="title_activity_delete_me">Sign in</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
