<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/main_nav"

            android:title="@string/main" />
        <item
            android:id="@+id/liked_nav"

            android:title="@string/liked" />
        <item
            android:id="@+id/myProfile_nav"

            android:title="@string/myProfile" />
        <item
            android:id="@+id/settings_nav"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/settings" />
        <item
            android:id="@+id/shop_nav"

            android:title="@string/shop" />
        <item
            android:id="@+id/bugReport_nav"

            android:title="@string/bugReport" />
        <item
            android:id="@+id/logout_nav"

            android:title="@string/logout" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
